updated verify jwt token
