# src/docs/swagger.json
@@ -75,24 +75,13 @@
                 }
             }
         },
-        "/users": {
-            "get": {
-                "tags": [
-                    "users"
-                ],
-                "summary": "return list users",
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            },
+        "/auth/register": {
             "post": {
                 "consumes": [
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "auth"
                 ],
                 "summary": "create a user",
                 "parameters": [
@@ -113,8 +102,31 @@
                 }
             }
         },
+        "/users": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "return list users",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/users/{user_id}": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "tags": [
                     "users"
                 ],
@@ -135,6 +147,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -167,6 +184,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -192,23 +214,6 @@
         }
     },
     "definitions": {
-        "models.Auth": {
-            "type": "object",
-            "required": [
-                "refresh_token"
-            ],
-            "properties": {
-                "access_token": {
-                    "type": "string"
-                },
-                "refresh_token": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
-                }
-            }
-        },
         "models.RefreshToken": {
             "type": "object",
             "required": [
@@ -229,14 +234,6 @@
                 "username"
             ],
             "properties": {
-                "auth": {
-                    "description": "relations",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/models.Auth"
-                        }
-                    ]
-                },
                 "first_name": {
                     "type": "string"
                 },
@@ -268,9 +265,9 @@
         }
     },
     "securityDefinitions": {
-        "ApiKeyAuth": {
+        "Bearer": {
             "type": "apiKey",
-            "name": "Token",
+            "name": "Authorization",
             "in": "header"
         }
     }
